syntax = "proto3";

package bsync;
option go_package = "./;bsync";

import "google/protobuf/timestamp.proto";

//
// Sync
//


message MuteOperation {
  enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_ADD = 1;
    TYPE_REMOVE = 2;
    TYPE_CLEAR = 3;
  }
  string id = 1;
  Type type = 2;
  string actor_did = 3;
  string subject = 4;
}

message AddMuteOperationRequest {
  MuteOperation.Type type = 1;
  string actor_did = 2;
  string subject = 3;
}

message AddMuteOperationResponse {
  MuteOperation operation = 1;
}

message ScanMuteOperationsRequest {
  string cursor = 1;
  int32 limit = 2;
}

message ScanMuteOperationsResponse {
  repeated MuteOperation operations = 1;
  string cursor = 2;
}

message NotifOperation {
  enum Setting {
    SETTING_UNSPECIFIED = 0;
    SETTING_UNFILTERED = 1;
    SETTING_PRIORITY = 2;
  }
  string id = 1;
  string actor_did = 2;
  Setting setting = 3;
}

message AddNotifOperationRequest {
  string actor_did = 1;
  NotifOperation.Setting setting = 2;
}

message AddNotifOperationResponse {
  NotifOperation operation = 1;
}

message ScanNotifOperationsRequest {
  string cursor = 1;
  int32 limit = 2;
}

message ScanNotifOperationsResponse {
  repeated NotifOperation operations = 1;
  string cursor = 2;
}



// Ping
message PingRequest {}
message PingResponse {}


service Service {
  // Sync
  rpc AddMuteOperation(AddMuteOperationRequest) returns (AddMuteOperationResponse);
  rpc ScanMuteOperations(ScanMuteOperationsRequest) returns (ScanMuteOperationsResponse);
  rpc AddNotifOperation(AddNotifOperationRequest) returns (AddNotifOperationResponse);
  rpc ScanNotifOperations(ScanNotifOperationsRequest) returns (ScanNotifOperationsResponse);
  // Ping
  rpc Ping(PingRequest) returns (PingResponse);
}
